# pg-extras-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  docker-compose.yml.sample  live_tests.sh
.github/workflows/: ci.yml
examples/: db_settings.rs
src/: diagnose.rs  lib.rs  main.rs
src/diagnose/: mod.rs  recommendation.rs  report.rs  run.rs  size_parser.rs
src/queries/: all_locks.rs  all_locks.sql  bloat.rs  blocking.rs  buffercache_stats.rs  buffercache_usage.rs  cache_hit.rs  calls.rs  connections.rs  db_settings.rs  duplicate_indexes.rs  extensions.rs  index_cache_hit.rs  index_scans.rs  index_size.rs  index_usage.rs  indexes.rs  locks.rs  locks.sql  long_running_queries.rs  mandelbrot.rs  null_indexes.rs  outliers.rs  records_rank.rs  seq_scans.rs  shared.rs  ssl_used.rs  table_cache_hit.rs  table_cache_hit.sql  table_index_scans.rs  table_indexes_size.rs  table_size.rs  tables.rs  total_index_size.rs  total_table_size.rs  unused_indexes.rs  unused_indexes.sql  vacuum_stats.rs
src/sql/: all_locks.sql  bloat.sql  blocking.sql  buffercache_stats.sql  buffercache_usage.sql  cache_hit.sql  calls.sql  calls_17.sql  calls_legacy.sql  connections.sql  db_settings.sql  extensions.sql  index_cache_hit.sql  index_scans.sql  index_size.sql  index_usage.sql  locks.sql  long_running_queries.sql  mandelbrot.sql  null_indexes.sql  outliers.sql  outliers_17.sql  outliers_legacy.sql  records_rank.sql  seq_scans.sql  ssl_used.sql  table_cache_hit.sql  table_index_scans.sql  table_indexes_size.sql  table_size.sql  total_index_size.sql  total_table_size.sql  unused_indexes.sql  vacuum_stats.sql
src/structs/: all_locks.rs  bloat.rs  blocking.rs  buffercache_stats.rs  buffercache_usage.rs  cache_hit.rs  calls.rs  connections.rs  db_settings.rs  duplicate_indexes.rs  extensions.rs  index_cache_hit.rs  index_scans.rs  index_size.rs  index_usage.rs  indexes.rs  locks.rs  long_running_queries.rs  mandelbrot.rs  mod.rs  null_indexes.rs  outliers.rs  records_rank.rs  seq_scans.rs  shared.rs  ssl_used.rs  table_cache_hit.rs  table_index_scans.rs  table_indexes_size.rs  table_size.rs  tables.rs  total_index_size.rs  total_table_size.rs  unused_indexes.rs  vacuum_stats.rs
src/web/: mod.rs  routes.rs
src/web/controllers/: home.rs  mod.rs  queries.rs
templates/: _diagnose_result.html  _query_selector.html  _result.html  home.html  layout.html  query.html
