[package]
authors = ["Pawel Urbanek <contact@pawelurbanek.com>"]
categories = ["database"]
description = "PostgreSQL performance database insights"
edition = "2021"
license = "MIT"
name = "pg-extras"
readme = "README.md"
repository = "https://github.com/pawurb/rust-pg-extras"
version = "0.3.2"

exclude = ["docker-compose.yml.sample", "live_tests.sh"]

[dependencies]
prettytable-rs = "0.10.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "bigdecimal",
] }

tokio = { version = "1.40", features = ["full"] }

[[bin]]
name = "pg_extras"
path = "src/main.rs"
