[package]
authors = ["Pawel Urbanek <contact@pawelurbanek.com>"]
categories = ["database"]
description = "PostgreSQL performance database insights"
edition = "2021"
license = "MIT"
name = "pg-extras"
readme = "README.md"
repository = "https://github.com/pawurb/pg-extras-rs"
version = "0.6.2"

exclude = ["docker-compose.yml.sample", "live_tests.sh"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
lazy_static = "1.5.0"
prettytable-rs = "0.10.0"
semver = "1.0.23"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "bigdecimal",
] }

tokio = { version = "1.40", features = ["full"] }
strum = { version = "0.26", features = ["derive"] }

[profile.release]
lto = true

[[bin]]
name = "pgextras"
path = "bin/main.rs"

[[example]]
name = "db_settings"
path = "examples/db_settings.rs"
