[package]
authors = ["Pawel Urbanek <contact@pawelurbanek.com>"]
categories = ["database"]
description = "PostgreSQL performance database insights"
edition = "2021"
license = "MIT"
name = "pg-extras"
readme = "README.md"
repository = "https://github.com/pawurb/pg-extras-rs"
version = "0.7.1"

exclude = ["docker-compose.yml.sample", "live_tests.sh"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
lazy_static = "1.5.0"
prettytable-rs = "0.10.0"
semver = "1.0.23"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "bigdecimal",
] }

tokio = { version = "1.40", features = ["full"] }
unicode-width = "0.2.0"
textwrap = { version = "0.16.1", features = ["terminal_size"] }

# web
axum = { version = "0.7", optional = true }
askama = { version = "0.12.1", features = ["with-axum"], optional = true }
askama_axum = { version = "0.4.0", optional = true }
tower-http = { version = "0.6.2", features = ["fs", "trace"], optional = true }
eyre = "0.6.12"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = "1.0.215"
serde_json = "1.0.133"
reqwest = "0.12.9"


[profile.release]
lto = true

[[bin]]
name = "pgextras"
path = "bin/main.rs"

[[example]]
name = "db_settings"
path = "examples/db_settings.rs"

[features]
web = ["dep:axum", "dep:askama", "dep:askama_axum", "dep:tower-http"]
